# dj-containers

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
containers/django/: Dockerfile
containers/postgis/: Dockerfile
my_site/cities/: admin.py  apps.py  models.py
my_site/cities/management/commands/: replace_cities.py
my_site/cities/migrations/: 0001_initial.py  0002_city_pref_code_city_pref_name.py
my_site/my_site/: asgi.py  settings.py  urls.py  wsgi.py
my_site/prefectures/: admin.py  apps.py  models.py
my_site/prefectures/migrations/: 0001_initial.py
prefectures/: apps.py
resources/cities/: cities.dbf  cities.prj  cities.shp
resources/institutions/: institutions.dbf  institutions.shp  institutions.shx
resources/prefectures/: prefectures.shx
