[tool.poetry]
name = "dj-containers"
version = "0.1.0"
description = ""
authors = ["Yasunori Ishiguro <xjr1300.04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg = "^3.1.12"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
