[tool.poetry]
name = "dj-containers"
version = "0.1.0"
description = ""
authors = ["Yasunori Ishiguro <xjr1300.04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg = "^3.1.12"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
ruff = "^0.1.0"
pre-commit = "^3.5.0"
black = "^23.9.1"
mypy = "^1.6.0"
django-stubs = "^4.2.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 311
profile = "black"
line_length = 120
extend_skip_glob = ["**/migrations/*"]

[tool.black]
exclude = '''
(
    migrations/
)
'''

target-version = ["py311"]
line-length = 120
[tool.ruff]
target-version = "py311"
line-length = 120
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D400", # First line should end with a period
    "D415", # First line should end with a period, question mark, or exclamation point
]
exclude = ["migrations"]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "my_site.my_site.settings"
